--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "react-use-websocket": "^4.11.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
