--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,13 @@
 FROM python:3.13.2-alpine
 
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-RUN pip install --upgrade pip
 COPY ./requirements.txt /app/requirements.txt
+
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . /app
