--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,6 +7,11 @@ services:
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
+    develop:
+      watch:
+        - action: sync
+          path: ./
+          target: /app
     ports:
       - "8000:8000"
     depends_on:
