--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ channels==4.2.0
 constantly==23.10.4
 cryptography==44.0.0
 daphne==4.1.2
+dj-database-url==2.3.0
 Django==5.1.5
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
@@ -20,6 +21,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 pillow==11.1.0
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
